force-app/main/default/objects/VKCZahlung__c/VKCZahlung__c.object-meta.xml
<CustomObject>
    <label>VKC Zahlung</label>
    <nameField>
        <displayFormat>EZ-{YYYY}-{MM}-{DD}-{0000000}</displayFormat>
        <label>VKC Zahlung Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VKC Zahlungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>