force-app/main/default/objects/VkcZahlung__c/fields/BusinessPartner__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartner__c</fullName>
    <label>Geschäftspartner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>