force-app/main/default/objects/VKCZahlung__c/fields/Verkaufschance__c.field-meta.xml
<CustomField>
    <fullName>Verkaufschance__c</fullName>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>VKC Zahlungen</relationshipLabel>
    <relationshipName>VKCZahlungen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>