force-app/main/default/objects/VKCZahlung__c/fields/Zahldatum__c.field-meta.xml
<CustomField>
    <fullName>Zahldatum__c</fullName>
    <label>Zahldatum</label>
    <type>Date</type>
</CustomField>